<resources>
    <string name="app_name">IYANS</string>
    <string name="facebook_app_id">369973283406382</string>
    <string name="fb_login_protocol_scheme">fb[369973283406382]</string>
    <string name="positive_button_datetime_picker">OK</string>
    <string name="negative_button_datetime_picker">Cancel</string>
    <string name="about">About</string>
    <string name="about_this_version">About this Version</string>
    <string name="account_privacy">Account Privacy</string>
    <string name="account_setting">Account Setting</string>
    <string name="action_done">DONE</string>
    <string name="action_open">OPEN</string>
    <string name="action_save">SAVE</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_main">Filters</string>
    <string name="add_a_comment">Add a Comment…</string>
    <string name="adele">Adele</string>
    <string name="already_user_sign_in">Already User? Sign in!</string>
    <string name="amazon">Amazon</string>
    <string name="ampm_circle_radius_multiplier">0.19</string>
    <string name="april">April</string>
    <string name="audrey">Audrey</string>
    <string name="birthday">Birthday</string>
    <string name="bluemess">BlueMess</string>
    <string name="calendar">Calendar</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_header">CHANGE PASSWORD</string>
    <string name="chat">Chat</string>
    <string name="clarendon">Clarendon</string>
    <string name="clean">clean</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">YhL1La1DTK7oJrpTC85Ujunq6</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">tXUi8pg3ZmHah0uXr4bFR2ciM0YY7nNwWFOBQGUXCBA3pX6VGf</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="copyright_2013_iyans_all_rights_reserved">Copyright 2018 IYANS - All Rights Reserved</string>
    <string name="cruz">Cruz</string>
    <string name="day"> day ago</string>
    <string name="days"> days ago</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="description">Description</string>
    <string name="edit">EDIT</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_header">EDIT PROFILE</string>
    <string name="email">Email</string>
    <string name="enter_date_of_birth">Please enter date of birth.</string>
    <string name="enter_firest_name">Please enter your first name.</string>
    <string name="enter_last_name">Please enter your last name.</string>
    <string name="enter_username">Please enter username.</string>
    <string name="enter_valid_email">Please enter a valid email.</string>
    <string name="enter_valid_password">Please enter valid password</string>
    <string name="facebook">FACEBOOK</string>
    <string name="feed_article_title">Feed Article Title</string>
    <string name="feeds">Feeds</string>
    <string name="female">Female</string>
    <string name="filter_normal">Normal</string>
    <string name="filters">FILTERS</string>
    <string name="first_name">First Name</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="gender">Gender</string>
    <string name="general_setting">General Setting</string>
    <string name="haan">Haan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hour"> hour ago</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="hours"> hours ago</string>
    <string name="image_preview">Image Preview</string>
    <string name="img_datetime">Image datetime</string>
    <string name="instagram">Instagram</string>
    <string name="label_datetime_dialog">DateTime</string>
    <string name="label_select_video">Select Video</string>
    <string name="last_name">Last Name</string>
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="lime">Lime</string>
    <string name="linked_account">Linked Account</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="logout_msj">Are you sure, you want to logout ?</string>
    <string name="male">Male</string>
    <string name="mars">Mars</string>
    <string name="message_cannot_be_blank">Massage Can\'t Be Blank!</string>
    <string name="metropolis">Metropolis</string>
    <string name="minute"> minute ago</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="minutes"> minutes ago</string>
    <string name="name">Name</string>
    <string name="new_password">New Password</string>
    <string name="next">Go to next</string>
    <string name="no_url">No url</string>
    <string name="notification">Notification</string>
    <string name="old_password">Old Password</string>
    <string name="oldman">OldMan</string>
    <string name="otp_not_valid">Otp not valid</string>
    <string name="pass_not_match">Password not match</string>
    <string name="password">Password</string>
    <string name="previous">Go to previous</string>
    <string name="profile">Profile</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="register">REGISTER</string>
    <string name="registration">REGISTRATION</string>
    <string name="replay">Replay</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="rise">Rise</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="sans_serif">sans-serif</string>
    <string name="select_gender">Please select gender.</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="selection_radius_multiplier">0.16</string>
    <string name="send">SEND</string>
    <string name="services">Services</string>
    <string name="setting">SETTING</string>
    <string name="shipped_ffmpeg_version">n2.4.2</string>
    <string name="sign_up">SIGN UP</string>
    <string name="simple_date_format">yyyy-MM-dd \'at\' HH:mm</string>
    <string name="sound_effect">Sound Effect</string>
    <string name="starlit">Starlit</string>
    <string name="struck">Struck</string>
    <string name="submit">Submit</string>
    <string name="tab_edit">EDIT</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tele_post">Tele Post</string>
    <string name="telepost">Telepost</string>
    <string name="telepost_auto_manual">Telepost Auto/Manual</string>
    <string name="terms">Terms</string>
    <string name="text_size_multiplier_inner">0.14</string>
    <string name="text_size_multiplier_normal">0.17</string>
    <string name="text_size_multiplier_outer">0.11</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="tips_not_wifi">You are currently using the mobile network, the player will continue to consume traffic</string>
    <string name="tips_not_wifi_cancel">Stop play</string>
    <string name="tips_not_wifi_confirm">Resume</string>
    <string name="title">title</string>
    <string name="title_cannot_be_blank">Title Can\'t Be Blank!</string>
    <string name="twiter">Twiter</string>
    <string name="twitter">TWITTER</string>
    <string name="type_to_search_here">Type to search here</string>
    <string name="update">UPDATE</string>
    <string name="user_name">User Name</string>
    <string name="username">Username</string>
    <string name="username_or_email">Username or Email</string>
    <string name="valid_otp">Enter valid otp</string>
    <string name="valid_username_email">Please enter valid username or email</string>
    <string name="verification">Verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="whats_app">Whats App</string>
    <string name="whisper">Whisper</string>
    <string name="wrong_details">Your login details are wrong</string>

</resources>
