<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_bg"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/header_left"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:id="@+id/rlActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="backPage"
                android:padding="@dimen/margin5"
                android:src="@drawable/ic_navigate_before_black_24dp" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/registration"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textSize20"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/svMainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/rlMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin15">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin5"
                android:onClick="pickImage"
                android:src="@drawable/user_placeholder_white"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="1dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivProfileImage"
                android:layout_alignRight="@+id/ivProfileImage"
                android:src="@drawable/ic_photo_camera_black_24dp" />

            <LinearLayout
                android:id="@+id/linFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivProfileImage"
                android:layout_marginTop="@dimen/margin10"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginRight="@dimen/margin5"
                    android:layout_weight="1.0"
                    android:background="@drawable/cornorwhite"
                    android:hint="@string/first_name"
                    android:padding="@dimen/margin8"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHint"
                    android:textSize="@dimen/textSize14" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginLeft="@dimen/margin5"
                    android:layout_weight="1.0"
                    android:background="@drawable/cornorwhite"
                    android:hint="@string/last_name"
                    android:padding="@dimen/margin8"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHint"
                    android:textSize="@dimen/textSize14" />
            </LinearLayout>

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linFullName"
                android:layout_marginTop="@dimen/margin5"
                android:background="@drawable/cornorwhite"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="@dimen/margin8"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/textSize14" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etUserName"
                android:layout_marginTop="@dimen/margin5"
                android:background="@drawable/cornorwhite"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/margin8"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/textSize14" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:layout_marginTop="@dimen/margin5"
                android:background="@drawable/cornorwhite"
                android:drawablePadding="@dimen/margin8"
                android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/margin8"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/textSize14" />

            <EditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPass"
                android:layout_marginTop="@dimen/margin5"
                android:background="@drawable/cornorwhite"
                android:drawablePadding="@dimen/margin8"
                android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/margin8"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/textSize14" />

            <TextView
                android:id="@+id/tvDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmPass"
                android:layout_marginTop="@dimen/margin5"
                android:background="@drawable/cornorwhite"
                android:drawableRight="@drawable/ic_date_range_black_24dp"
                android:hint="@string/birthday"
                android:onClick="selectDateofBirth"
                android:padding="@dimen/margin8"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/textSize14" />

            <LinearLayout
                android:id="@+id/linGenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDob"
                android:layout_marginTop="@dimen/margin5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/gender"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textSize14"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/colorWhite" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@color/colorWhite" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linGenger"
                android:layout_marginTop="@dimen/margin5"
                android:background="@drawable/cornorwhite"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="3"
                android:padding="@dimen/margin8"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHint" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etDescription"
                android:layout_marginTop="@dimen/margin5"
                android:background="@drawable/cornorblue"
                android:gravity="center"
                android:onClick="registerUser"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textSize14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignin"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin8"
                android:layout_marginTop="@dimen/margin8"
                android:onClick="userForgotPass"
                android:text="@string/forgot_password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textSize12" />

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSubmit"
                android:layout_marginTop="@dimen/margin30"
                android:background="@drawable/cornorgrey"
                android:gravity="center"
                android:onClick="alreadyUser"
                android:padding="@dimen/margin8"
                android:text="@string/already_user_sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/margin14"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
