<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plane_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/header_left"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:id="@+id/rlActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="backPage"
                android:padding="@dimen/margin5"
                android:src="@drawable/ic_navigate_before_black_24dp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textSize20"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:padding="@dimen/margin10">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/margin5"
            android:background="@drawable/cornorwhite"
            android:hint="@string/username_or_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin8"
            android:singleLine="true"
            android:textSize="@dimen/textSize14" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/margin5"
            android:layout_marginTop="@dimen/margin8"
            android:background="@drawable/cornorwhite"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/margin8"
            android:singleLine="true"
            android:textSize="@dimen/textSize14" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPass"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/margin5"
            android:layout_marginTop="@dimen/margin8"
            android:background="@drawable/cornorblue"
            android:gravity="center"
            android:onClick="userSignin"
            android:padding="@dimen/margin8"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSubmit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin8"
            android:onClick="userForgotPass"
            android:text="@string/forgot_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize14" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvForgotPass"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/margin5"
            android:layout_marginTop="@dimen/margin5"
            android:background="@drawable/cornorgrey"
            android:gravity="center"
            android:onClick="registerUser"
            android:padding="@dimen/margin8"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize14"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnTwitter"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/margin5"
            android:layout_marginTop="@dimen/margin5"
            android:background="@drawable/cornorfb"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize14"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/margin5"
            android:background="@drawable/cornortw"
            android:text="@string/twitter"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize14"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>
